# F5R-TTS

./: LICENSE  README.md  pyproject.toml
src/f5_tts/infer/: infer_cli.py
src/f5_tts/model/: cfm.py  dataset.py  trainer.py  utils.py
src/f5_tts/model/backbones/: dit.py
src/f5_tts/train/: train_rl.py
src/rl/: difftools.py  reward.py  trainer_rl.py  utils.py
